# pam-coffee-auth

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
src/: CMakeLists.txt  infer.cpp  model.cpp  model.hpp  pam_torch.cpp
tools/: compile_model.py
